and decimal values.  Thanks again to John S<F. Morse>.

=item *

A single header field line is limited to 998 bytes, per S<RFC 5536>.
B<innd> was previously accepting, and also generating Xref: header field
lines, up to 1022 bytes.

=item *

Fixed an issue at configure time that made INN wrongly assume that OpenBSD
(4.6) didn't support Unix-domain sockets.  Thanks to Wim Lewis for the patch.

=back

=head1 Changes in 2.5.2

The way checkpoints are handled by B<innreport> for B<innd> and B<innfeed>
has totally changed to provide more accurate daily statistics.  The first
Usenet report after an upgrade to S<INN 2.5.2> will probably contain
incorrect statistics for incoming and outgoing articles because the
beginning of the log files that will be used was generated by a previous
version of INN.

A new version of F<innreport.conf> is shipped with S<INN 2.5.2> but, in
order to preserve any local changes, will not be automatically installed
with make update.  The changes are minor and not mandatory for the
upgrade.

=over 2

=item *

Julien Elie has implemented in B<innd> the new version of the NNTP
protocol described in S<RFC 3977>, S<RFC 4643> and S<RFC 4644>, and
B<innd> now recognizes the CAPABILITIES command.  Despite these standards,
three commands (IHAVE, CHECK and TAKETHIS) will continue, for
interoperability reasons, to return a reject code (respectively C<435>,
C<438>, and C<439>) when the command contains a syntax error instead of
C<501>.  The mandatory username argument for authenticated peers is not
enforced in S<INN 2.5.2> but will be be enforced by S<INN 2.6.0> when it
is released.

Major improvements are:

=over 2

=item *

B<innd> now has a decent parser for NNTP commands.  The parser is more
correct (commands like C<< IHAVEZ<><mid> >>, without a space between the
command and its argument, are no longer valid) and allows leading and
trailing whitespaces in commands.  B<innd> also now checks the length of